--- a/views/note/add.ejs
+++ b/views/note/add.ejs
@@ -2,7 +2,7 @@
   <h1 class="h2">Add Note(s)</h1>
   <div class="btn-toolbar mb-2 mb-md 0">
     <div class="btn-group me-2">
-      <button class="btn btn-sm btn-outline-secondary">?</button>
+      <button class="btn btn-sm btn-outline-secondary">Future Use</button>
     </div>
   </div>
 </div>
@@ -16,11 +16,7 @@
           <li class="breadcrumb-item active">New Note</li>
         </ol>
       </nav>
-    </div>
-    <div class="col text-end fw-lighter">
-      <b>UserId</b>
-    </div>
-  </div>
+    
 
 </div>
 
