--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,28 +5,30 @@
 </div>
 
 
-<% if (messages && Array.isArray(messages) && messages.length > 0) { %>
-    <% messages.forEach(message => { %>
-    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        <%= message %>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-    <% }) %>
-  <% } %>
-  
- 
+<% if (messages && Array.isArray(messages) && messages.length> 0) { %>
+    <% messages.forEach(message=> { %>
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <%= message %>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        <% }) %>
+            <% } %>
 
-    <form action="/login" method="POST">
-        <div class="form-group">
-            <input type="email" class="form-control" id="email" name="email" placeholder="Email">
-        </div>
-        <br>
-        <div>
-            <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
-        </div>
-        <br>
-        <div class="form-group mb-4">
-            <button type="submit" class="btn btn-primary">Login</button>
-        </div>
-    </form>
-</div>
+
+
+                <form action="/login" method="POST">
+                    <div class="form-group">
+                        <input type="email" class="form-control" id="email" name="email" placeholder="Email" required>
+                    </div>
+                    <br>
+                    <div>
+                        <input type="password" class="form-control" id="password" name="password" placeholder="Password"
+                            required>
+                    </div>
+                    <br>
+                    <div class="form-group mb-4">
+                        <button type="submit" class="btn btn-primary">Login</button>
+                    </div>
+
+                </form>
+                </div>
