--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,34 +1,34 @@
 <div class="d-flex justify-content-between flex-wrap flex-md nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="h2">Login</h1>
-    <div class="btn-toolbar mb-2 mb-md 0">
-    </div>
+    
 </div>
 
 
-<% if (messages && Array.isArray(messages) && messages.length> 0) { %>
-    <% messages.forEach(message=> { %>
-        <div class="alert alert-danger alert-dismissible fade show" role="alert">
-            <%= message %>
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <% if (messages && Array.isArray(messages) && messages.length> 0) { %>
+        <% messages.forEach(message=> { %>
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                <%= message %>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <% }) %>
+                <% } %>
+
+
+        <div class='container-fluid border mb-2 p-4 my-4 bg-light'>
+            <form action="/login" method="POST">
+            <div class="form-group">
+                <input type="email" class="form-control" id="email" name="email" placeholder="Email" required>
+            </div>
+            <br>
+            <div>
+                <input type="password" class="form-control" id="password" name="password" placeholder="Password"
+                    required>
+            </div>
+            <br>
+            <div class="form-group mb-4">
+                <button type="submit" class="btn btn-primary">Login</button>
+            </div>
+            </form>
         </div>
-        <% }) %>
-            <% } %>
+        
 
-
-
-                <form action="/login" method="POST">
-                    <div class="form-group">
-                        <input type="email" class="form-control" id="email" name="email" placeholder="Email" required>
-                    </div>
-                    <br>
-                    <div>
-                        <input type="password" class="form-control" id="password" name="password" placeholder="Password"
-                            required>
-                    </div>
-                    <br>
-                    <div class="form-group mb-4">
-                        <button type="submit" class="btn btn-primary">Login</button>
-                    </div>
-
-                </form>
-                </div>
