--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
           <td><%= element.category %></td>
           <td>
             <% if (element.linkurl) { %>
-              <a href="<%= element.linkurl %>" type="button" class="btn btn-primary btn-small">
+              <a href="<%= element.linkurl %>" target="_blank" type="button" class="btn btn-primary btn-small">
                 <i class="bi bi-link-45deg"></i>
               </a>
             <% } %>
