--- a/views/note/view.ejs
+++ b/views/note/view.ejs
@@ -39,7 +39,7 @@
   <li class="list-group-item"> 
     <div class="row">
       <div class="col" style="max-width: 140px"> <b>URL:</b></div>
-      <div class="col"><%= note.linkurl %></div>
+      <div class="col"><a href="<%= note.linkurl %>" target="_blank"><%= note.linkurl %> </a> </div>
     </div>
   </li>
 
