--- a/views/search.ejs
+++ b/views/search.ejs
@@ -17,7 +17,7 @@
           <th scope="col">Category</th>
           <th scope="col">URL</th>
           <th scope="col">Comments</th>
-          <th scope="col">Action</th>
+          <th scope="col">View</th>
         </tr>
       </thead>
       <tbody>
