--- a/views/indexAuth.ejs
+++ b/views/indexAuth.ejs
@@ -24,7 +24,7 @@
           <th scope="col">Title</th>
           <th scope="col">Category</th>
           <th scope="col">Link</th>
-          <th scope="col" class="text-end">View Record</th>
+          <th scope="col" class="text-end">Actions</th>
         </tr>
       </thead>
   
@@ -35,7 +35,7 @@
             <td><%= element.category %></td>
             <td>
               <% if (element.linkurl) { %>
-                <a href="<%= element.linkurl %>" type="button" class="btn btn-primary btn-small">
+                <a href="<%= element.linkurl %>" target="_blank" type="button" class="btn btn-primary btn-small">
                   <i class="bi bi-link-45deg"></i>
                 </a>
               <% } %>
