--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -12,7 +12,14 @@
 </head>
 <body>
 
-  <%- include('../partials/header.ejs') %>
+
+  <% if (locals.headerType === 'headerAuth') { %>
+    <%- include('../partials/headerAuth.ejs') %>
+  
+  <% } else { %>
+    <%- include('../partials/header.ejs') %>
+  <% } %>
+
 
   <div class="container-fluid">
     <div class="row">
